fix filter form show on small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2088,23 +2088,19 @@ html {
   position: absolute;
   right: 0;
   top: 55px;
-  padding: 30px;
+  padding: 30px 0;
   border-radius: 20px;
   background: var(--filter-form-bg-color);
   filter: drop-shadow(0px 40px 90px var(--filter-form-shadow));
   transition: opacity 0.25s, visibility 0.25s;
 }
-@media (max-width: 1199.98px) {
-  .filter {
-    padding-bottom: 0;
-    height: calc(100vh - 80px);
-    overflow-y: auto;
-    overscroll-behavior: contain;
-  }
-}
 @media (max-width: 575.98px) {
   .filter {
-    width: 85vw;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    inset: 0;
+    border-radius: 0;
   }
 }
 .filter.hide {
@@ -2137,11 +2133,17 @@ html {
   font-size: 1.4rem;
   line-height: 1.42;
 }
+@media (max-width: 1199.98px) {
+  .filter__form-label--small {
+    width: 100%;
+  }
+}
 .filter__form-group {
   margin-top: 20px;
 }
 .filter__form-group--horizontal {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
 .filter__form-slider {
@@ -2177,6 +2179,11 @@ html {
   color: #9e9da8;
   font-weight: 400;
 }
+@media (max-width: 575.98px) {
+  .filter__form-input {
+    font-size: 1.6rem;
+  }
+}
 .filter__form-text-input, .filter__form-select-wrap {
   border-radius: 6px;
   border: 1px solid #d2d1d6;
@@ -2198,6 +2205,11 @@ html {
   line-height: 1.42;
   cursor: pointer;
 }
+@media (max-width: 1199.98px) {
+  .filter__form-select {
+    flex: 1;
+  }
+}
 .filter__form-select + .filter__form-select {
   border-left: 1px solid #d2d1d6;
 }
@@ -2205,6 +2217,11 @@ html {
   display: flex;
   flex-wrap: wrap;
   gap: 10px 20px;
+}
+@media (max-width: 575.98px) {
+  .filter__form-tags {
+    gap: 10px;
+  }
 }
 .filter__form-tag {
   padding: 6px 12px;
@@ -2263,11 +2280,10 @@ html {
   justify-content: flex-end;
   margin-top: 32px;
 }
-@media (max-width: 1199.98px) {
+@media (max-width: 575.98px) {
   .filter__footer {
     position: sticky;
-    bottom: 0;
-    padding-bottom: 15px;
+    bottom: 30px;
     background: var(--filter-form-bg-color);
   }
 }
@@ -2281,14 +2297,29 @@ html {
 @media (max-width: 575.98px) {
   .filter__cancel, .filter__submit {
     flex: 1;
+    height: 42px;
   }
 }
 .filter__submit {
   font-size: 1.4rem;
 }
+.filter__heading, .filter__content, .filter__footer {
+  padding: 0 30px;
+}
+.filter__content {
+  max-height: calc(100vh - 350px);
+  overflow-y: auto;
+  overscroll-behavior: contain;
+}
 @media (max-width: 1199.98px) {
   .filter__content {
     flex-direction: column;
+  }
+}
+@media (max-width: 575.98px) {
+  .filter__content {
+    max-height: calc(100vh - 230px);
+    padding-bottom: 60px;
   }
 }
 
