--- a/scss/components/_filter-form.scss
+++ b/scss/components/_filter-form.scss
@@ -9,22 +9,19 @@
     right: 0;
     top: 55px;
 
-    padding: 30px;
+    padding: 30px 0;
     border-radius: 20px;
 
     background: var(--filter-form-bg-color);
     filter: drop-shadow(0px 40px 90px var(--filter-form-shadow));
     transition: opacity 0.25s, visibility 0.25s;
 
-    @include abstracts.screen(xl) {
-        padding-bottom: 0;
-        height: calc(100vh - 80px);
-        overflow-y: auto;
-        overscroll-behavior: contain;
-    }
-
     @include abstracts.screen(sm) {
-        width: 85vw;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        inset: 0;
+        border-radius: 0;
     }
 
     &.hide {
@@ -59,6 +56,10 @@
                 margin-bottom: 10px;
                 font-size: 1.4rem;
                 line-height: 1.42;
+
+                @include abstracts.screen(xl) {
+                    width: 100%;
+                }
             }
         }
 
@@ -66,7 +67,8 @@
             margin-top: 20px;
 
             &--horizontal {
-                display: flex;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
                 gap: 30px;
             }
         }
@@ -109,6 +111,10 @@
                 color: #9e9da8;
                 font-weight: 400;
             }
+
+            @include abstracts.screen(sm) {
+                font-size: 1.6rem;
+            }
         }
 
         &-text-input,
@@ -136,6 +142,10 @@
             font-weight: 500;
             line-height: 1.42;
             cursor: pointer;
+
+            @include abstracts.screen(xl) {
+                flex: 1;
+            }
         }
 
         &-select + &-select {
@@ -146,6 +156,10 @@
             display: flex;
             flex-wrap: wrap;
             gap: 10px 20px;
+
+            @include abstracts.screen(sm) {
+                gap: 10px;
+            }
         }
 
         &-tag {
@@ -212,10 +226,9 @@
         justify-content: flex-end;
         margin-top: 32px;
 
-        @include abstracts.screen(xl) {
+        @include abstracts.screen(sm) {
             position: sticky;
-            bottom: 0;
-            padding-bottom: 15px;
+            bottom: 30px;
             background: var(--filter-form-bg-color);
         }
     }
@@ -231,16 +244,31 @@
         
         @include abstracts.screen(sm) {
             flex: 1;
+            height: 42px;
         }
     }
 
     &__submit {
         font-size: 1.4rem;
     }
+    
+    &__heading, 
+    &__content,
+    &__footer {
+        padding: 0 30px;
+    }
 
     &__content {
+        max-height: calc(100vh - 350px);
+        overflow-y: auto;
+        overscroll-behavior: contain;
         @include abstracts.screen(xl) {
             flex-direction: column;
+        }
+
+        @include abstracts.screen(sm) {
+            max-height: calc(100vh - 230px);
+            padding-bottom: 60px;
         }
     }
 }
